File Attachment Button Added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   flutter_svg: ^2.0.9
+  emoji_picker_flutter: ^1.6.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
